# FX-smc-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: base.yaml
deploy/: crontab  setup-vps.sh
docs/: ARCHITECTURE.md  CANDIDATE_SELECTION_GUIDE.md  DATA_GUIDE.md  EXPERIMENT_PLAYBOOK.md  HOLDOUT_POLICY.md  LLM_HANDOFF_SUMMARY.md  PAPER_CAMPAIGN_GUIDE.md  PAPER_TRADING_GUIDE.md  PROJECT_CONTEXT_FOR_LLMS.md  PROMOTION_WORKFLOW.md  RESEARCH_METHODOLOGY.md  RISK_MODEL.md  VALIDATION_GUIDE.md
paper_validation_program/: checkpoint_decision_matrix.md  discrepancy_monitoring_spec.md  final_paper_stage_decision_template.md  paper_program_manifest.json  paper_stage_checkpoints.md  paper_stage_escalation_rules.md  paper_stage_invalidation_rules.md  paper_stage_metrics_spec.md  paper_validation_program.md  risk_event_monitoring_spec.md  week_1_signal_integrity_review.md  week_2_discrepancy_review.md  week_4_performance_review.md  week_6_final_paper_review.md  weekly_review_template.md
scripts/: compare_experiments.py  download_data.py  download_real_data.py  generate_report.py  generate_validation_data.py  inspect_data.py  run_1year_hardening.py  run_8week_prop_replay.py  run_advanced_validation.py  run_alpha_discovery.py  run_backtest.py  run_campaign.py  run_final_promotion_gate.py  run_forward_paper.py  run_holdout_and_finalize.py  run_holdout_stability_investigation.py  run_live_forward_service.py  run_multi_pair_research.py  run_nearlive_wave.py  run_pair_specific_research.py  run_paper.py  run_research.py  (+9 more)
(+433 files in other folders)
