[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-smc-bot"
version = "0.1.0"
description = "Research-grade multi-pair FX framework for systematic SMC/ICT strategy development."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Iepure Toni" }
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "PyYAML>=6.0,<7.0",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "polars>=1.0,<2.0",
  "scipy>=1.13,<2.0",
  "pyarrow>=16.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
